Move vtable out of ice
When we need to use genxml-functions in the rest of the driver, we export them via ice->vtbl entries.
This is not great for several reasons:
- You have to have ice in order to call them. Some of them just take a BO, or a shader stage, or the screen, and don't otherwise need a context.
- We actually store all the function pointers in every iris_context, wasting memory.
We should move to a global table initialized at screen creation time. We could store this in screen, but fishing out a screen can be kind of annoying. A better idea might be to simply make an iris_vtbl global variable.