src/gallium/drivers/iris/iris_batch.h
@@ -62,7 +62,6 @@ struct iris_address {
 
 struct iris_batch {
    struct iris_screen *screen;
-   struct iris_vtable *vtbl;
    struct pipe_debug_callback *dbg;
    struct pipe_device_reset_callback *reset;
 
@@ -144,7 +143,6 @@ struct iris_batch {
 
 void iris_init_batch(struct iris_batch *batch,
                      struct iris_screen *screen,
-                     struct iris_vtable *vtbl,
                      struct pipe_debug_callback *dbg,
                      struct pipe_device_reset_callback *reset,
                      struct hash_table_u64 *state_sizes,
